-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.5.0, Qt Creator 2.6.0
-
None
-
23844410fdc100342860e400a62e86c408ac4605
struct Foo { int bar; };
template<typename T>
struct Outer
{
T *t;
struct Nested { T *nt; } nested;
};
int main(int argc, char *argv[])
{
Outer<Foo> list;
list.t-> // works
list.nested.nt-> // doesn't work
Outer<Foo>::Nested nested;
nested.nt-> // doesn't work
return 0;
}
This makes iterators hard to use...
IIRC it used to work, can't remember on which version.